fixed overflow issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,10 @@ body {
 header > * {
   font-size: 1.5rem;
 }
+.header {
+  overflow-y: hidden;
+}
+
 .header_logo {
   height: 0;
   width: 0;
@@ -32,6 +36,7 @@ header > * {
 .header_wrapper {
   background-color: transparent;
   transition: background-color 500ms ease-in;
+  overflow-y: hidden;
 }
 .header_wrapper.checked {
   background-color: hsla(0, 0%, 100%, 0.5);
